<resources>
    <string name="app_name">Simon\'s memory game!</string>
    <string name="about_button"><u>About &amp; How to play</u></string>
    <string name="play_button">Play</string>
    <string name="log_button">Log</string>
    <string name="x_label">X:</string>
    <string name="y_label">Y:</string>
    <string name="z_label">Z:</string>
    <string name="placeholder_zero_with_decimals">0.00</string>
    <string name="accelerometer_statistics">Accelerometer statistics</string>
    <string name="seconds_remaining">seconds remaining: </string>
    <string name="feedback_good">Great!</string>
    <string name="feedback_bad">Wrong!</string>
    <string name="rating_label">Your rating:</string>
    <string name="streak_label">Longest streak:</string>
    <string name="streak_placeholder">4</string>
    <string name="rating_placeholder">A+</string>
    <string name="quit_level_text">Give Up</string>
    <string name="next_level_text">Next Level</string>
    <string name="round_label">Round:</string>
    <string name="round_placeholder">3</string>
    <string name="difficulty_placeholder">EASY</string>
    <string name="between_prompt_positive">Nice work!</string>
    <string name="between_prompt_negative">Better luck next time!</string>
    <string name="memorize_prompt">Memorize the following sequence!</string>
    <string name="play_prompt">Get ready to play!</string>
    <string name="start_game">Start game</string>
    <string name="restart_game">Play again</string>
    <string name="quit_game">Quit</string>
    <string name="game_over">Game over!</string>
    <string name="about">About</string>
    <string name="how_to_play">How to play</string>
    <string name="about_text">This game was made by Lukas Kuhlin for the course Advanced Interaction Design (MAMN01)</string>
    <string name="game_instructions_1">This game is a combination of memory and Simon Says! The game consists of multiple rounds where you need to memorize a shown sequence of phone poses which you will mimic. Each round consists of two phases: the instructions phase and the game phase.</string>
    <string name="simon_says">Simon says! Tilt phone left</string>
    <string name="simon_says_not">Simon says not! Tilt phone right</string>
    <string name="instructions_phase">Instructions phase</string>
    <string name="game_phase">Game phase</string>
    <string name="instructions_phase_instructions_1">The instructions phase will show a sequence of phone poses, memorize these. If the background is green you need to mimic it during the game phase. If the background is red during the pose, you need to do the opposite of the pose, i.e. tilt phone right if the screen shows a left pose or hold phone still if the screen tells you to shake!</string>
    <string name="game_phase_instructions_1">During the game phase you need to act out the sequence you have memorized. For each phone pose, you need to act out the pose and hold it for half a second in the specified amount of time. When the difficulty increases, the time to act out a pose shortens and the amount of poses to memorize increases.</string>
    <string name="game_phase_instructions_2">If you fail three poses in a round, you lose a live. You have three lives in total and when all lives are lost you lose the game. Try to get as far as possible! Good luck!</string>
    <string name="total_score">Total score:</string>
    <string name="round_score">Round score:</string>
</resources>