<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >
            <LinearLayout
                android:layout_width="300dp"
                android:layout_marginHorizontal="64dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:text="@string/about"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/how_to_play"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_marginTop="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:text="@string/game_instructions_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/instructions_phase"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:text="@string/instructions_phase_instructions_1"/>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="64dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:cardCornerRadius="24dp"
                            app:cardElevation="0dp">
                            <ImageView
                                android:layout_width="256dp"
                                android:layout_height="256dp"
                                android:layout_gravity="center"
                                android:src="@drawable/screenshot_positive"
                                android:contentDescription="@string/simon_says"
                                />

                        </androidx.cardview.widget.CardView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/simon_says"
                            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="128dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:cardCornerRadius="24dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:layout_width="256dp"
                                android:layout_height="256dp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/simon_says_not"
                                android:src="@drawable/screenshot_negative" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:text="@string/simon_says_not"
                            android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_marginHorizontal="64dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:text="@string/game_phase"
                    android:layout_marginTop="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/game_phase_instructions_1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:text="@string/game_phase_instructions_2"
                    android:layout_marginBottom="128dp"/>

            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>