<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >
        <LinearLayout
            android:layout_width="300dp"
            android:layout_marginHorizontal="64dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/log_button"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/accelerometerHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer_statistics"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/xLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/xLogger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/placeholder_zero_with_decimals"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintVertical_bias="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/yLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />

            <TextView
                android:id="@+id/yLogger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_zero_with_decimals"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/zLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 />

            <TextView
                android:id="@+id/zLogger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_zero_with_decimals"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>